--- a/homepage/style.css
+++ b/homepage/style.css
@@ -1,5 +1,5 @@
-# $Id: style.css,v 1.2 2004/04/02 20:59:55 mitch Exp $
-# minimal CSS
+/* $Id: style.css,v 1.2 2004/04/02 20:59:55 mitch Exp
+ * minimal CSS */
 
 a:link { color: #2077E0; }
 a:visited { color: #0040C0; }
